--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,8 @@
     "start:dev": "deno run --watch src/main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "pg": "npm:pg@^8.13.1"
   },
   "compilerOptions": {
     "strict": true,
