--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "main": "main.js",
   "scripts": {
     "start:dev:host": "npm run buildr",
-    "buildr": "npm run clean && npm run compile && node dist/main",
+    "buildr": "npm run build && dotenv -c '.env' -- node dist/main",
+    "build": "npm run clean && npm run compile && npm run db:migrate:generate",
     "compile": "tsc",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "db:migrate:generate": "drizzle-kit generate"
   },
   "repository": {
     "type": "git",
@@ -27,11 +29,19 @@
   },
   "homepage": "https://github.com/Skulltulla/dsastack-server-node#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.2",
+    "drizzle-orm": "^0.35.3",
+    "node-postgres": "^0.6.2",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.8.0"
   },
   "devDependencies": {
+    "@types/node": "^22.8.2",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.26.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
 }
