--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2021",
     "module": "NodeNext",
     "outDir": "dist",
+    // "rootDir": "./src",
     // required for tsyringe
     "experimentalDecorators": true,
     // required for tsyringe
@@ -13,5 +14,11 @@
     "skipLibCheck": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
